objects/Case_Animal__c.object
<CustomObject>
    <fields>
        <fullName>Animal__c</fullName>
        <label>Animal</label>
        <referenceTo>Animal__c</referenceTo>
        <relationshipLabel>Case Animals</relationshipLabel>
        <relationshipName>Case_Animals</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Animals</relationshipLabel>
        <relationshipName>Case_Animals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shelter_Location__c</fullName>
        <formula>Animal__r.Shelter_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shelter Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sheltermate_Number__c</fullName>
        <formula>Animal__r.Sheltermate_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sheltermate Number</label>
        <type>Text</type>
    </fields>
    <label>Case Animal</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Case Animals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>